app/less/pages.less
/* Individual page definitions not worthy of a separate LESS file. */

@heading-color: #474d54;

.initial h1 {
    margin-bottom: 23px;
    color: @heading-color;
}

.initial.status h1 {
    margin: 90px 0 12px 0;
    font-size: 60px;
    line-height: 50px;
}

.initial.error h2 {
    margin: 90px 0 12px 0;
    font-size: 24px;
    line-height: 28px;
    color: @heading-color;
}

.initial.error h2 span.fa-stack {
    height: 1em;
    width: 1em;
    line-height: 1em;
}

.initial.error p, .initial.status p {
    line-height: 28px;
}

.initial #save {
    background-color: @blue;
    width: inherit;
    padding-left: 52px;
    padding-right: 52px;
    outline: none;
}

/* FIXME: same as password, combine rule? */
.initial input[type="text"], .initial textarea {
    margin-top: 0;
    margin-bottom: 5px;
}

/* http://codepen.io/vcmg/pen/JdKeVG */
.dot {
  height: 10px;
  width: 10px;
  border-radius: 50%;
  background-color: @light-blue;
  display: inline-block;
  margin: 0 auto;
  -webkit-animation: jump 1.5s linear infinite;
}

@-webkit-keyframes jump {
  0%, 100% {transform: translateY(0px);}
  20% {transform: translateY(-10px);}
  40% {transform: translateY(0px);}
}

.dot:nth-of-type(2) {
  -webkit-animation-delay: 0.2s;
}

.dot:nth-of-type(3) {
  -webkit-animation-delay: 0.4s;
}

/* end dots */

.center-container {
    width: 860px;
    margin: 0 auto 0 auto;
}
.center-container.initial {
    margin-top: 10px;
    margin-bottom: 50px;
}
.error-page p {
    color: #ef5557;
    margin: 20px 0;
    text-align: center;
}

#license-key {
    width: 450px;
    max-width: none;
}

.version {
    font-size: 10px;
    width: 100%;
    text-align: right;
}

/* manage */
section.run-as-user {
    margin-top: 15px;
}

/* about */
.about-page h1.page-title {
    margin-bottom: 20px;
}
.about-page h2 {
    margin-top: 50px;
    margin-bottom: 5px;
}
.about-page > div > h2:first-of-type {
    margin-top: 0px;
}
.about-page .address p {
    margin: 0px;
}
.about-page button {
    margin-top: 25px;
    width: 200px;
}

/* profile */
.profile-page h1.page-title {
    margin-bottom: 20px;
}
.profile-page h2 {
    margin-top: 50px;
    margin-bottom: 5px;
}
.profile-page h2:first-of-type {
    margin-top: 0px;
}
.profile-page p {
    margin: 0px;
}

/* setup */
.setup-page #smtp-port {
    width: 64px;
}
.setup-page #test-email-recipient {
    width: 50%;
}
input[name="storage-type"] {
    display: inline-block;
    margin-bottom: 25px;
}
input[name="storage-type"] + label {
    display: inline-block;
    margin: 0 25px 0 3px;
}
label[for*="s3-"], label[for*="gcs-"] {
    margin: 0;
}
#storage-destination, #storage-destination ul, #storage-destination ul li {
    min-width: 370px;
}
#auth {
    margin-bottom: 35px;
}
#mail-server-type {
    margin-bottom: 10px;
}

/* workbooks */
.workbook-page .item .summary div.col2 div {
    text-align: right;
}
#workbook-list ul {
    padding-left: 0;
}

/* users */

/* FIXME: make .onoffswitch.small instead */

.email-level {
    position: relative;
}
.email-level .onoffswitch {
    width: 52px;
    position: absolute;
    top: 0;
    left: 60px;
    height: 20px;
    left: 85px;
}
.email-level .onoffswitch {
    left: 85px;
}
.email-level .onoffswitch-inner:before, .email-level .onoffswitch-inner:after {
    font-size: 12px;
    line-height: 18px;
    height: 16px;
}
.email-level .onoffswitch-inner:before {
    padding-left: 8px;
}
.email-level .onoffswitch-inner:after {
    padding-right: 8px;
}
.email-level .onoffswitch-switch {
    width: 12px;
    right: 32px;
}
#user-list div.description {
    min-height: 200px;
}
/* This rule should only apply to the permissions dropdown */
#user-list .btn-group {
    width: 200px;
}
/* This rule prevents the ? from wrapping */
#user-list article.perms > div {
    width: 230px
}
#user-list i.help {
    position: relative;
    top: 3px;
    padding: 0 0 0 5px;
}

